--- a/Makefile.sasc
+++ b/Makefile.sasc
@@ -18,7 +18,7 @@ DFLAG        = DEF=
 OFLAGS       = OPT OPTSCHED OPTTIME OPTALIAS DATA=FAR CODE=FAR
 CFLAGS       = DEF inline= IDLEN=128 MATH=S STKEXT CPU=$(CPU)
 WFLAGS       = IGNORE=88 IGNORE=89 IGNORE=85 IGNORE=100 IGNORE=304 \
-               IGNORE=317 IGNORE=92 IGNORE=84 IGNORE=161
+               IGNORE=317 IGNORE=92 IGNORE=84 IGNORE=161 IGNORE=105
 LDFLAGS      = NOICONS
 LIBS         = MATH=S STKEXT
 
