--- a/Makefile.vbcc-mos
+++ b/Makefile.vbcc-mos
@@ -8,6 +8,8 @@ CPU    := ppc
 OBJDIR := obj$(CPU)
 NATIVE := 1
 
+EXT    := vbccppc
+
 ifneq ($(lastword $(MAKEFILE_LIST)), Makefile.vbcc-mos)
 MAKEFILE_LIST += Makefile.vbcc-mos
 endif
