--- a/Makefile.sasc
+++ b/Makefile.sasc
@@ -2,7 +2,7 @@
 # Makefile for SAS/C
 ###############################################################################
 
-CC  := sc NOVER
+CC  := sc
 EXT := sasc
 
 ifneq ($(lastword $(MAKEFILE_LIST)), Makefile.sasc)
@@ -15,11 +15,11 @@ LINK_TO      = LINK TO
 COMPILE_TO   = OBJNAME
 		     
 DFLAG        = DEF=
-OFLAGS       = OPT OPTSCHED OPTTIME OPTALIAS DATA=FAR CODE=FAR
+OFLAGS       = NOVER OPT OPTSCHED OPTTIME OPTALIAS DATA=FAR CODE=FAR
 CFLAGS       = DEF inline= IDLEN=128 MATH=S STKEXT CPU=$(CPU)
 WFLAGS       = IGNORE=88 IGNORE=89 IGNORE=85 IGNORE=100 IGNORE=304 \
                IGNORE=317 IGNORE=92 IGNORE=84 IGNORE=161 IGNORE=105
 LDFLAGS      = NOICONS
-LIBS         = MATH=S STKEXT
+LIBS         = NOVER MATH=S STKEXT
 
 POST_BUILD   = c:delete quiet \#?.lnk 
