--- a/Makefile.vbcc-aos
+++ b/Makefile.vbcc-aos
@@ -5,6 +5,8 @@
 CC     := vc +aos68k
 OBJDIR := obj68k
 
+EXT    := vbccm68k
+
 ifneq ($(lastword $(MAKEFILE_LIST)), Makefile.vbcc-aos)
 MAKEFILE_LIST += Makefile.vbcc-aos
 endif
