added compilation times in Makefiles

--- a/Makefile.sasc
+++ b/Makefile.sasc
@@ -15,11 +15,11 @@ LINK_TO      = LINK TO
 COMPILE_TO   = OBJNAME
 		     
 DFLAG        = DEF=
-OFLAGS       = NOVER OPT OPTSCHED OPTTIME OPTALIAS DATA=FAR CODE=FAR
-CFLAGS       = DEF inline= IDLEN=128 MATH=S STKEXT CPU=$(CPU)
+OFLAGS       = OPT OPTSCHED OPTTIME OPTALIAS DATA=FAR CODE=FAR
+CFLAGS       = NOVER DEF inline= IDLEN=128 MATH=S STKEXT CPU=$(CPU)
 WFLAGS       = IGNORE=88 IGNORE=89 IGNORE=85 IGNORE=100 IGNORE=304 \
                IGNORE=317 IGNORE=92 IGNORE=84 IGNORE=161 IGNORE=105
-LDFLAGS      = NOICONS
-LIBS         = NOVER MATH=S STKEXT
+LDFLAGS      = NOVER NOICONS
+LIBS         = MATH=S STKEXT
 
 POST_BUILD   = c:delete quiet \#?.lnk 
