--- a/Makefile.vbcc
+++ b/Makefile.vbcc
@@ -14,6 +14,8 @@ ifneq ($(lastword $(MAKEFILE_LIST)), Makefile.vbcc)
 MAKEFILE_LIST += Makefile.vbcc
 endif
 
+EXT    := vbcc
+
 include Makefile
 
 OFLAGS := -speed -maxoptpasses=199 -O3
@@ -24,7 +26,7 @@ LDFLAGS =
 LIBS    = -lamiga -lmsoft
 
 GREP = :ade/bin/grep # FIXME
-COMPILE_EXTRA = | $(GREP) -v  "warning 120 " | $(GREP) -v  ">{" | $(GREP) -v  ">extern"
+COMPILE_EXTRA = | $(GREP) -v -E  "warning 120|>[{]|>extern"
 
 # These file take too much memory to compile with -O3, so we reduce optim level a bit
 NO_O3 = $(OBJDIR)/expressc.o $(OBJDIR)/files.o
