--- a/Makefile.vbcc-mos
+++ b/Makefile.vbcc-mos
@@ -3,7 +3,7 @@
 ##############################################################################
 
 CC     := vc +morphos
-OS     := morphos
+OS     := mos
 CPU    := ppc
 NATIVE := 1
 
