--- a/Makefile.vbcc-aos
+++ b/Makefile.vbcc-aos
@@ -4,13 +4,15 @@
 
 ifneq ("$(wildcard vbcc:config/kick13)","")
 CC          := vc +kick13
-OS          := ks13
-RUNNING_AOS := 1
+OS          := kick13
 else
 CC          := vc +aos68k
+OS          := kick2x
 endif
 
-ifneq ($(lastword $(MAKEFILE_LIST)), Makefile.vbcc-aos)
+RUNNING_AOS := 1
+
+ifneq ($(lastword $(MAKEFILE_LIST)),Makefile.vbcc-aos)
 MAKEFILE_LIST += Makefile.vbcc-aos
 endif
 include Makefile.vbcc
